tests/invalid/Record_Invalid_2.whiley
type Global is {Broken field}
Global Broken = {y: 2, x: 1}

